@@ -52,13 +52,6 @@ public class ToChildBlockJoinQuery extends Query {
   private final BitSetProducer parentsFilter;
   private final Query parentQuery;
 
-  // If we are rewritten, this is the original parentQuery we
-  // were passed; we use this for .equals() and
-  // .hashCode().  This makes rewritten query equal the
-  // original, so that user does not have to .rewrite() their
-  // query before searching:
-  private final Query origParentQuery;
-
   /**
    * Create a ToChildBlockJoinQuery.
    * 
@@ -67,14 +60,6 @@ public class ToChildBlockJoinQuery extends Query {
    */
   public ToChildBlockJoinQuery(Query parentQuery, BitSetProducer parentsFilter) {
     super();
-    this.origParentQuery = parentQuery;
-    this.parentQuery = parentQuery;
-    this.parentsFilter = parentsFilter;
-  }
-
-  private ToChildBlockJoinQuery(Query origParentQuery, Query parentQuery, BitSetProducer parentsFilter) {
-    super();
-    this.origParentQuery = origParentQuery;
     this.parentQuery = parentQuery;
     this.parentsFilter = parentsFilter;
   }
@@ -312,9 +297,7 @@ public class ToChildBlockJoinQuery extends Query {
   public Query rewrite(IndexReader reader) throws IOException {
     final Query parentRewrite = parentQuery.rewrite(reader);
     if (parentRewrite != parentQuery) {
-      return new ToChildBlockJoinQuery(parentQuery,
-                                parentRewrite,
-                                parentsFilter);
+      return new ToChildBlockJoinQuery(parentRewrite, parentsFilter);
     } else {
       return super.rewrite(reader);
     }
@@ -332,7 +315,7 @@ public class ToChildBlockJoinQuery extends Query {
   }
 
   private boolean equalsTo(ToChildBlockJoinQuery other) {
-    return origParentQuery.equals(other.origParentQuery) &&
+    return parentQuery.equals(other.parentQuery) &&
            parentsFilter.equals(other.parentsFilter);
   }
 
@@ -340,7 +323,7 @@ public class ToChildBlockJoinQuery extends Query {
   public int hashCode() {
     final int prime = 31;
     int hash = classHash();
-    hash = prime * hash + origParentQuery.hashCode();
+    hash = prime * hash + parentQuery.hashCode();
     hash = prime * hash + parentsFilter.hashCode();
     return hash;
   }
